<resources>
    <string name="app_name">Terpel</string>
    <string name="welcome_title">Bienvenido a Terpel</string>
    <string name="welcome_description">Tu viaje inicia aquí, regístrate y descubre las estaciones más cercanas, conoce el precio de cada Estación, acumula puntos Friend Terpel para obtener beneficios en cupones, experiencias y más. \n\n¡Descubre la app que lo tiene todo!</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="action_register">Registrarme</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="register_title">Registro</string>
    <string name="start">Comenzar</string>
    <string name="continue_label">Continuar</string>
    <string name="register_now">Registrarse</string>
    <string name="otp_title">¿Ya tienes tu código?</string>
    <string name="otp_hint">Ingresa el código de 6 dígitos</string>
    <string name="verify">Verificar</string>
    <string name="resend_in">Puedes solicitar un código nuevo en %1$d segundos</string>
    <string name="home_title">Inicio</string>
    <string name="hello_name">¡Hola %1$s!</string>
    <string name="friend_card">Tarjeta Friend</string>
    <string name="mis_puntos">Mis puntos</string>
    <string name="puntos_por_vencer">Puntos por vencer</string>
    <string name="catalogo_premios">Catálogo premios</string>
    <string name="tus_beneficios">Tus beneficios</string>
    <string name="misiones">Misiones</string>
    <string name="mis_consumos">Mis consumos</string>
    <string name="tus_aliados">Tus aliados</string>
    <string name="redime_tus_puntos">Redime tus puntos</string>
    <string name="ver_todo">Ver todo</string>
    <string name="cupones_friend_terpel">Cupones Friend Terpel</string>
    <string name="mis_favoritos">Mis Favoritos</string>
    <string name="combustible">Combustible</string>
    <string name="inicio_tab">Inicio</string>
    <string name="mapas_tab">Mapas</string>
    <string name="catalogo_tab">Catálogo</string>
    <string name="tarjeta_tab">Tarjeta</string>
    <string name="password_strength">Fortaleza de contraseña</string>
    <string name="data_authorization_title">Conoce nuestras políticas</string>
    <string name="data_authorization_text">Autorizo el tratamiento de datos personales y acepto los términos y condiciones de Terpel Panamá y app Terpel. Consulta más detalles en nuestras políticas.</string>
    <string name="accept_authorization">Autorizo el tratamiento de datos personales y términos y condiciones</string>
    <string name="next">Siguiente</string>
</resources>
